# Programacion-Estructurada

./: CMakeLists.txt  README.md
eje1/: estudiantes.c  estudiantes.h  main.c  util.c  util.h
eje2/: main.c  uniones.c  uniones.h
eje3/: Copia-de-estructuras.c  Copia-de-estructuras.h  main.c
eje4/: Creacion-de-alias.c  Creacion-de-alias.h  main.c
eje5/: estructuras.c  estructuras.h
